--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -14,6 +14,7 @@
         "^~/stories/(.*)$",
         "^~/actions/(.*)$",
         "^~/reducers(/.*)?$",
+        "^~/redux(/.*)?$",
         "^~/scripts/(.*)$",
         "^~/env(/.*)?$",
         "^[./]"
