--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
 	"main": "server.js",
 	"type": "module",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.0",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
