--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -15,6 +15,8 @@
         "^~/actions/(.*)$",
         "^~/reducers(/.*)?$",
         "^~/redux(/.*)?$",
+        "^~/services/(.*)$",
+        "^~/utils/(.*)$",
         "^~/scripts/(.*)$",
         "^~/env(/.*)?$",
         "^[./]"
