--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
-PORT=5000
-DATABSE_URL=mongodb://localhost:27017/TodosDb
-JWT_SECRET=/.>dasda6d5465d541<./+
+PORT=8000
+DATABASE_URL=mongodb://127.0.0.1:27017/school
+JWT_TOKEN=KNDKASNDKLASND
+JWT_REFRESH_TOKEN=klnflkjsdfklsjafs
