--- a/backend/package.json
+++ b/backend/package.json
@@ -1,24 +1,18 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"description": "",
-	"main": "server.js",
-	"type": "module",
-	"dependencies": {
-		"bcrypt": "^5.1.1",
-		"body-parser": "^1.20.0",
-		"cookie-parser": "^1.4.6",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.1",
-		"express": "^4.18.1",
-		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.5.2"
-	},
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon server.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC"
+  "name": "pro3",
+  "version": "1.0.0",
+  "main": "server.js",
+  "license": "MIT",
+  "type": "module",
+  "scripts": {
+    "start": "nodemon server.js"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.3"
+  }
 }
