--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=8000
-DATABASE_URL=mongodb://127.0.0.1:27017/school
+DATABASE_URL=mongodb://127.0.0.1:27017/Todos
 JWT_TOKEN=KNDKASNDKLASND
 JWT_REFRESH_TOKEN=klnflkjsdfklsjafs
