--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -84,7 +84,10 @@
 
     "parserOptions": {
         "sourceType": "module",
-        "requireConfigFile": false // <== ADD THIS
+        "requireConfigFile": false, // <== ADD THIS,
+        "babelOptions": {
+            "presets": ["@babel/preset-react"]
+        }
     },
     "settings": {
         "react": {
