--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
     "prettier": "^3.2.5"
