--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,5 @@ PORT=8000
 DATABASE_URL=mongodb://127.0.0.1:27017/Todos
 JWT_TOKEN=KNDKASNDKLASND
 JWT_REFRESH_TOKEN=klnflkjsdfklsjafs
+GOOGLE_CLIENT_ID=530803780682-eaq4f6m9h4jkhof3eg11spto46cv4pjv.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
