--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,4 @@ JWT_TOKEN=KNDKASNDKLASND
 JWT_REFRESH_TOKEN=klnflkjsdfklsjafs
 GOOGLE_CLIENT_ID=530803780682-eaq4f6m9h4jkhof3eg11spto46cv4pjv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+BASE_FROTEND_URL="http://localhost:3000"
