--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "pro3",
-  "version": "1.0.0",
-  "main": "server.js",
-  "license": "MIT",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.2",
-    "express-session": "^1.18.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3",
-    "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
-    "passport-google-oauth20": "^2.0.0"
-  },
-  "devDependencies": {
-    "prettier": "^3.2.5"
-  }
+    "name": "pro3",
+    "version": "1.0.0",
+    "main": "server.js",
+    "license": "MIT",
+    "type": "module",
+    "scripts": {
+        "dev": "nodemon server.js",
+        "debug": "npx nodemon --inspect server.js"
+    },
+    "dependencies": {
+        "bcrypt": "^5.1.1",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.2",
+        "express-session": "^1.18.0",
+        "jsonwebtoken": "^9.0.2",
+        "mongoose": "^7.6.3",
+        "passport": "^0.7.0",
+        "passport-github2": "^0.1.12",
+        "passport-google-oauth20": "^2.0.0"
+    },
+    "devDependencies": {
+        "prettier": "^3.2.5"
+    }
 }
