--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,6 @@ JWT_TOKEN=KNDKASNDKLASND
 JWT_REFRESH_TOKEN=klnflkjsdfklsjafs
 GOOGLE_CLIENT_ID=530803780682-eaq4f6m9h4jkhof3eg11spto46cv4pjv.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-BASE_FROTEND_URL="http://localhost:3000"
+BASE_FROTEND_URL=http://localhost:3000
 GITHUB_CLIENT_ID=1acb4ac4ed4bdca0891b
 GITHUB_CLIENT_SECRET=cd003bbbdd4d13698575d1d6df8e025f6ae49d1d
