--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
         "passport-google-oauth20": "^2.0.0"
     },
     "devDependencies": {
+        "eslint": "^8.57.0",
         "prettier": "^3.2.5"
     }
 }
